fixed draggable issue - absolute box was just too big that it covered it.

--- a/woodwork.css
+++ b/woodwork.css
@@ -144,8 +144,6 @@
    position: absolute;
    top: 15vh;
    left: 20px;
-   right: 10px;
-   bottom: 20px;
 }
 
 .in-dev {
